--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
     color: #ffffff;
 }
 
-.second-block {
+.images-left {
     
     width: 373.69px;
     height: 364.21px;
@@ -78,7 +78,7 @@
 }
 
 /* Контейнер для первой картинки */
-.second-block__image-container--1 {
+.images-left__image-container--1 {
     width: 176px;
     height: 298px;
     position: absolute;
@@ -90,7 +90,7 @@
 }
 
 /* Контейнер для второй картинки */
-.second-block__image-container--2 {
+.images-left__image-container--2 {
     width: 176px;
     height: 298px;
     position: absolute;
@@ -102,7 +102,7 @@
 }
 
 /* Стили для изображений внутри контейнеров */
-.second-block__image {
+.images-left__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -127,7 +127,7 @@
     opacity: 1; 
 }
 
-.third-block {
+.images-right {
     
     width: 392px;
     height: 421px;
@@ -136,7 +136,7 @@
     
 }
 
-.third-block__image-container--1 {
+.images-right__image-container--1 {
     width: 184px;
     height: 316px;
     position: absolute;
@@ -146,7 +146,7 @@
     overflow: hidden; 
 }
 
-.third-block__image-container--2 {
+.images-right__image-container--2 {
     width: 184px;
     height: 316px;
     position: absolute;
@@ -157,15 +157,15 @@
     
 }
 
-.third-block__image {
+.images-right__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
 
-/* Блок с двумя текстами */
-.content-block {
+
+.text-right {
     position: absolute;
     width: 280px;
     height: 432px;
@@ -177,7 +177,7 @@
 }
 
 
-.content-text {
+.content-text-right-first {
     width: 280px;
     height: 140px;
     font-family: 'Times', serif;
@@ -190,7 +190,7 @@
 }
 
 
-.content-typography {
+.content-text-right-second {
     width: 232px;
     height: 252px;
     font-family: 'Times', serif;
@@ -202,8 +202,8 @@
     text-decoration-skip-ink: none;
 }
 
-/*блок с буквами крутящимися*/
-.rotaited-block {
+
+.rotaited-symbols-block {
     position: absolute;
     width: 415.48px;
     height: 709px;
@@ -214,7 +214,7 @@
     
 }
 
-.picture-1 {
+.picture-first {
     position: absolute;
     width: 415.48px;
     height: 139.3px;
@@ -224,7 +224,7 @@
     
 }
 
-.picture-2 {
+.picture-second {
     position: absolute;
     width: 374px;
     height: 640px;
